Correct img path in ceremony.css
git-svn-id: https://localhost/svn/CounterManager/trunk@7553 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/ceremony/css/ceremony.css
+++ b/src/countermanager/http/ceremony/css/ceremony.css
@@ -1,4 +1,4 @@
 .bg-sky {
-    background: url("/eu21c2020/blue-sky.jpg") no-repeat;
+    background: url("../img/blue-sky.jpg") no-repeat;
     background-size: cover;
 }
