Use a start parameter with values "auto" or "click" to control the start behaviour
git-svn-id: https://localhost/svn/CounterManager/trunk@7635 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/ceremony/css/ceremony.css
+++ b/src/countermanager/http/ceremony/css/ceremony.css
@@ -1,3 +1,7 @@
+body {
+    background-color: black;
+}
+
 .bg-sky {
     background: url("../img/blue-sky.jpg") no-repeat;
     background-size: cover;
