Set min-width for playerservice
git-svn-id: https://localhost/svn/CounterManager/trunk@7773 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_matches_multiline.css
+++ b/src/countermanager/http/display/current_matches_multiline.css
@@ -51,6 +51,7 @@ body#current_matches_multiline {
 
 .playerservice {
     width: 0.5em;
+    min-width: 0.5em;
     height: 1.0em;
     padding-right: 10px;
 }
