Show data for Atos liveticker
git-svn-id: https://localhost/svn/CounterManager/trunk@8456 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/CounterPanelItem.form
+++ b/src/countermanager/gui/CounterPanelItem.form
@@ -53,6 +53,14 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dataMenuItemActionPerformed"/>
           </Events>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="atosDataMenuItem">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Atos Data"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="atosDataMenuItemActionPerformed"/>
+          </Events>
+        </MenuItem>
         <MenuItem class="javax.swing.JMenuItem" name="resultsMenuItem">
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
