Fix EC2022 issues
git-svn-id: https://localhost/svn/CounterManager/trunk@8464 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/monitor/layouts/ec2022.css
+++ b/src/countermanager/http/monitor/layouts/ec2022.css
@@ -121,12 +121,13 @@ body {
 
 .name {
     width: 600px;
+    max-width: 600px;
     position: absolute;
     height: inherit;
 }
 
 .name span {
-    max-width: 900px;  /* Same as .name */
+    max-width: 600px;  /* Same as .name */
 }
 
 #nameleft {
