Change color of .pos
git-svn-id: https://localhost/svn/CounterManager/trunk@9085 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/themes/common.css
+++ b/src/countermanager/http/display/themes/common.css
@@ -41,7 +41,7 @@ body {
 }
 
 .pos {
-    color: #0bf80b; /* same as points */
+    color: lightskyblue; /* or same as points */
 }
 
 .matchpoints {
