--- a/src/countermanager/http/display/current_matches_multiline.css
+++ b/src/countermanager/http/display/current_matches_multiline.css
@@ -93,6 +93,14 @@ body#current_matches_multiline {
     text-align: right;
 }
 
+/* Time */
+.clock span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.8ex;
+}
+
 
 /* Fonts */
 .caption td {
