Some rework to show current time in current matches
git-svn-id: https://localhost/svn/CounterManager/trunk@9216 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_matches_multiline.css
+++ b/src/countermanager/http/display/current_matches_multiline.css
@@ -94,12 +94,43 @@ body#current_matches_multiline {
 }
 
 /* Time */
+.clock {
+    padding-top: 1ex;    
+}
 .clock span {
     display: inline-flex;
-    justify-content: center;
     align-items: center;
-    width: 1.8ex;
 }
+
+.clock span#hour {
+    width: 1.2em;
+    justify-content: right;
+}
+
+.clock span#sephm {
+    width: 0.2em;
+    justify-content: center;
+    vertical-align: baseline;
+}
+
+.clock span#min {
+    width: 1.2em;
+    justify-content: center;
+}
+
+.clock span#sepms {
+    display: none;
+    width: 0.2em;
+    justify-content: center;
+    vertical-align: baseline;
+}
+
+.clock span#sec {
+    display: none;
+    width: 1.2em;
+    justify-content: left;
+}
+
 
 
 /* Fonts */
