Show current time at bottom of page
git-svn-id: https://localhost/svn/CounterManager/trunk@9404 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_matches_multiline.css
+++ b/src/countermanager/http/display/current_matches_multiline.css
@@ -95,7 +95,9 @@ body#current_matches_multiline {
 
 /* Time */
 .clock {
-    padding-top: 1ex;    
+    padding-top: 1ex;
+    position: absolute;
+    bottom: 0px;
 }
 .clock span {
     display: inline-flex;
